# faro

./: .gitignore  01_full_FOV_stimulation_ERK_Jungfrau_w_ramp_w_optocheck.ipynb  01_full_FOV_stimulation_ERK_MMDemo_w_ramp_w_optocheck.ipynb  01_full_FOV_stimulation_ERK_new_API.ipynb  01_full_FOV_stimulation_ERK_ramp_v2.ipynb  01_full_FOV_stimulation_ERK_ramp_v2_EXP20.ipynb  01_full_FOV_stimulation_ERK_w_optocheck.ipynb  01_full_FOV_stimulation_ERK_w_ramp_different_fovs.ipynb  01_full_FOV_stimulation_ERK_w_ramp_same_fov.ipynb  02_CellMigration.ipynb  02_CellMigration_Mic.ipynb  03_LineStimulation.ipynb  03_SpatialCellStimulation_Niesen.ipynb  04_full_FOV_stimulation_ERK_new_API.ipynb  11_full_FOV_stimulation_ERK_w_ramp_different_fovs.ipynb  11_full_FOV_stimulation_ERK_w_ramp_same_fov.ipynb  14_full_FOV_stimulation_ERK_new_API.ipynb  14_full_FOV_stimulation_ERK_new_API_test.ipynb  40x_affine.npy  60_GPAX_Migration_optimisation.ipynb  99_Manual_Re_analysis.ipynb  MIGRATION_GUIDE.md  README.md  TODO-napari-axis-labels.md  TODO.md  fovs.json  pyproject.toml
experiments/01_demo_microsocpe/: demo_microscope.ipynb
experiments/02_demo_sim_optogenetic/: demo_sim_optogenetic.ipynb
experiments/03_demo_writer_implementation/: convert_tiff_to_omezarr.ipynb  ome_zarr_writer.ipynb  ome_zarr_writer_plate.ipynb  tiff_writer.ipynb
experiments/11_erk_experiments_full_fov_stim/: DataViewer_ERK.py  README.md  stim_dfacquire.ipynb  stim_ramp_dfacquire.ipynb  stim_rtmsequence.ipynb  stim_rtmsequence_demo_mic.ipynb
experiments/21_cell_migration/: cell_migration.ipynb  cell_migration_test.ipynb
experiments/22_line_stimulation/: line_stimulation.ipynb
experiments/90_reanalysis/: reanalysis.ipynb
experiments/99_demo_data/full_fov_stim/: events.json  exp_data.parquet
experiments/99_demo_data/full_fov_stim/acquisition.ome.zarr/: zarr.json
experiments/99_demo_data/full_fov_stim/acquisition.ome.zarr/0/: 0.0.0.0.0  0.1.0.0.0  1.0.0.0.0  1.1.0.0.0  2.0.0.0.0  2.1.0.0.0  zarr.json
experiments/99_demo_data/full_fov_stim/acquisition.ome.zarr/labels/: zarr.json
experiments/99_demo_data/full_fov_stim/acquisition.ome.zarr/labels/labels/: zarr.json
experiments/99_demo_data/full_fov_stim/acquisition.ome.zarr/labels/labels/0/: 0.0.0.0  (+1 more)
experiments/99_demo_data/full_fov_stim/acquisition.ome.zarr/labels/labels_ring/: zarr.json
experiments/99_demo_data/full_fov_stim/acquisition.ome.zarr/labels/particles/: zarr.json
experiments/99_demo_data/full_fov_stim/ref/: 001_00002.tiff
experiments/99_demo_data/full_fov_stim/tracks/: 0_phase_1_latest.parquet  1_phase_1_latest.parquet
experiments/cell_migration/: cell_migration.ipynb  experiment.ipynb
experiments/cell_migration_demo/: experiment.ipynb
experiments/cell_migration_test/: cell_migration_test.ipynb
experiments/data_analysis/: experiment.ipynb
experiments/demo/: demo.ipynb  experiment.ipynb
experiments/demo_sim_optogenetic/: demo_sim_optogenetic.ipynb
experiments/erk_full_fov_stim/: erk_full_fov_stim.ipynb  erk_full_fov_stim_updated.ipynb  experiment.ipynb  experiment_updated.ipynb
experiments/legacy_erk_ramp/: experiment.ipynb  legacy_erk_ramp.ipynb
experiments/line_stimulation/: experiment.ipynb  line_stimulation.ipynb
experiments/no_stim/: experiment.ipynb  no_stim.ipynb
experiments/reanalysis/: experiment.ipynb
experiments/test_optogenetic_sim/: experiment.ipynb
faro/core/: _useq_compat.py  controller.py  conversion.py  data_structures.py  dmd.py  pipeline.py  pipeline_post.py  utils.py  writers.py
faro/feature_extraction/: base_ref.py  erk_ktr.py  erk_ktr_reduced.py  utils.py
faro/microscope/: base.py  demo.py  proxy.py  pymmcore.py  simulation.py
faro/microscope/pertzlab/: jungfrau.py  moench.py  niesen.py  show_power_properties.py
faro/segmentation/: base.py  cellpose.py  cellpose_v4.py  convpaint.py  remote_legacy.py  stardist.py
faro/stimulation/: percentage_of_colony.py
faro/tracking/: motile_tracker.py  trackpy.py
rtm_pymmcore/: controller.py  data_structures.py  dmd.py  img_processing_pip.py  utils.py
rtm_pymmcore/core/: controller.py  conversion.py  data_structures.py  pipeline.py  pipeline_post.py  utils.py  writers.py
rtm_pymmcore/feature_extraction/: abstract_fe.py  base.py  base_optocheck.py  erk_ktr.py  erk_ktr_reduced.py  fe_rgbd_on_stimulated_region.py  optocheck.py  optocheck_fe.py  ref.py  simple.py
rtm_pymmcore/microscope/: Jungfrau.py  MMDemo.py  Moench.py  MoenchNoDMD.py  Niesen.py  abstract_microscope.py  base.py  demo.py  jungfrau.py  moench.py  niesen.py  proxy.py  pymmcore.py  simulation.py
rtm_pymmcore/microscope/pertzlab/: jungfrau.py  moench.py  niesen.py
rtm_pymmcore/segmentation/: cellpose.py  cellpose_v4.py  cellposev4.py  convpaint.py  imaging_server.py  imaging_server_legacy.py  remote.py  remote_legacy.py  stardist.py
rtm_pymmcore/stimulation/: base.py  base_stimulation.py  center_circle.py  moving_line.py  moving_line_20x.py  moving_line_4x.py  percentage_distance_edge.py  percentage_of_cell.py  percentage_of_colony.py
rtm_pymmcore/tracking/: base.py  trackpy.py  trackpy_w_speed.py
rtm_pymmcore/viewer/: erk_ktr_viewer.py
tests/: conftest.py  manual_smoke_writers.py  test_contracts.py  test_event_ordering.py  test_events_to_dataframe.py  test_frame_dispenser.py  test_hardware_pertzlab.py  test_pipeline_integration.py  test_stim_modes_dispenser.py  test_tracks_dispenser.py  test_validate_events.py  test_validate_hardware.py
tests/hardware/: conftest.py  setup.ipynb  test_cell_migration.py  test_empty_fov_no_crash.py  test_line_stimulation.py  test_pipeline_lag.py  test_ref_channel_no_duplicate_pipeline_runs.py  test_skip_wait_devices_speedup.py  test_stim_mask_timeout.py  test_stim_timing.py  test_stim_with_cellpose.py
tests/hardware/pertzlab/: conftest.py  setup.ipynb  test_cell_migration.py  test_empty_fov_no_crash.py  test_line_stimulation.py  test_pipeline_lag.py  test_ref_channel_no_duplicate_pipeline_runs.py  test_skip_wait_devices_speedup.py  test_stim_mask_timeout.py  test_stim_timing.py  test_stim_with_cellpose.py
viewer/: 01_ERK-KTR_viewer.py
(+8 files in other folders)
