[project]
name = "faro"
version = "1.0.0"
description = "FARO - Feedback Adaptive Real-time Optogenetics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "ipykernel",
    "ipywidgets",
    "matplotlib",
    "napari[Pyqt6]",
    "scikit-image",
    "tifffile",
    "pymmcore-plus>=0.17.3",
    # Pinned to the v1 line. The v2 rewrite is tracked upstream at
    # https://pymmcore-plus.github.io/useq-schema/v2-migration/ — bump
    # deliberately once pymmcore-plus consumes v2.
    "useq-schema>=0.9.2,<0.10",
    "pymmcore-widgets",
    "trackpy",
    "napari-micromanager",
    "pymmcore-widgets",
    "ome-writers",
    "napari-ome-zarr",
    "zarr>=3",
]

[project.optional-dependencies]

test = [
    "pytest",
]

stardist = [
    "stardist",
    "tensorflow",
    "csbdeep",
    ]

cellpose = [
    # 4.1.1 fixed a numpy 2.x crash in models._resize_gradients on the
    # GPU code path. Older versions are fine on CPU but blow up on GPU.
    "cellpose>=4.1.1",
    "torch",
    # torchvision is a transitive dep of cellpose, but listed explicitly
    # so [tool.uv.sources] picks up the cu128 index pin (uv only routes
    # source overrides for packages declared as direct deps).
    "torchvision",
    ]

convpaint = [
    "napari-convpaint",
    "scipy"
]

remote-segmentation = [
    "imaging-server-kit",
]


virtual-microscope = [
    "virtual-microscope",
    "opencv-python",
    "imageio[ffmpeg]"
]

api74 = [
    "pymmcore==11.10.0.74.1"
]

api75 = [
    "pymmcore==12.2.2.75.0"
]


[[tool.uv.index]]
# CUDA 13.0 wheels. Requires NVIDIA driver >= 580.65.
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv]
conflicts = [
    [
        { extra = "api74" },
        { extra = "api75" },
    ],
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
virtual-microscope = { git = "https://github.com/hinderling/virtual-microscope.git" }
pymmcore-widgets = {git = "https://github.com/pymmcore-plus/pymmcore-widgets.git" }

[tool.pytest.ini_options]
markers = [
    "hardware: requires a real Pertzlab microscope (selected via --scope or FARO_SCOPE env var). Skipped by default.",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
